@@ -25,10 +25,10 @@ configurations {
 
 dependencies {
   // not required by gradle but required by the IDE because 'dist' do not has any transitive dependencies
-  testCompile project(':clustered:client')
-  testCompile project(':clustered:common')
-  testCompile project(':impl')
-  testCompile project(':xml')
+  testCompileOnly project(':clustered:client')
+  testCompileOnly project(':clustered:common')
+  testCompileOnly project(':impl')
+  testCompileOnly project(':xml')
 
   testCompile project(':dist')
   testCompile project(':clustered:clustered-dist')
@@ -65,14 +65,27 @@ task copyServerLibs(type: Copy) {
 }
 
 compileTestJava {
-  options.forkOptions.executable = Jvm.current().javacExecutable
+  options.forkOptions.javaHome = Jvm.current().javaHome
 }
 
 test {
   dependsOn copyServerLibs
-  executable = Jvm.current().javaExecutable
+  if (testJava.javaVersion.isJava8Compatible()) {
+    environment 'JAVA_HOME', testJava.javaHome
+  } else {
+    executable = Jvm.current().javaExecutable
+    environment 'JAVA_HOME', Jvm.current().javaHome
+  }
+  //TC Server Cannot Parse Java 9 VM Version String
+  if (testJava.javaVersion.isJava9Compatible()) {
+    //environment 'JAVA_OPTS', '--add-modules java.xml.bind'
+    environment 'JAVA_HOME', Jvm.current().javaHome
+  }
   // If you want to see all mutations of the voltron monitoring tree, add to JAVA_OPTS: -Dorg.terracotta.management.service.monitoring.VoltronMonitoringService.DEBUG=true
   environment 'JAVA_OPTS', '-Dcom.tc.l2.lockmanager.greedy.locks.enabled=false'
+  if (testJava.javaVersion.isJava9Compatible()) {
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+  }
   //If this directory does not exist, tests will fail with a cryptic assert failure
   systemProperty 'kitInstallationPath', "$unzipKit.destinationDir/${project(':clustered:clustered-dist').archivesBaseName}-$project.version-kit"
   // Uncomment to include client logging in console output
